--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -65,17 +65,20 @@
     "\n",
     "## Acknowledgements\n",
     "I'd like to acknowledge the work of the people behind usnpl.com and stationindex.com for compiling lists of local media outlets.\n",
-    "Andreu Casas and Gregory Eady provided invaluable comments to improve this dataset for public release. Kinjal Dave provided much need proof reading. I am funded and supported by the SMaPP Lab at NYU. Thank you Josh Tucker, Jonathan Nagler, Richard Bonneau and my collegue Nicole Baram.\n",
+    "Andreu Casas and Gregory Eady provided invaluable comments to improve this dataset for public release. Kinjal Dave provided much needed proofreading. I am funded and supported by the SMaPP Lab at NYU. Thank you Josh Tucker, Jonathan Nagler, Richard Bonneau and my collegue Nicole Baram.\n",
     "\n",
     "\n",
     "## Citation\n",
     "If this dataset is helpful to you please cite it as:\n",
     "```\n",
-    "@misc{Yin:2018\n",
-    "author = {Leon Yin and the SMaPP Lab},\n",
-    "title = {Local News Dataset},\n",
-    "year = {2018}\n",
-    "howpublished= {\\url{https://github.com/yinleon/LocalNewsDataset}} \n",
+    "@misc{leon_yin_2018_1345145,\n",
+    "  author       = {Leon Yin},\n",
+    "  title        = {Local News Dataset},\n",
+    "  month        = aug,\n",
+    "  year         = 2018,\n",
+    "  doi          = {10.5281/zenodo.1345145},\n",
+    "  url          = {https://doi.org/10.5281/zenodo.1345145}\n",
+    "}\n",
     "\n",
     "```\n",
     "\n",
