fixing table of contents

--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -114,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated 2018-10-16 13:40:59.676704\n",
+      "Updated 2018-10-16 13:47:05.027152\n",
       "By Leon\n",
       "Using Python 3.6.5\n",
       "On Linux-3.10.0-514.10.2.el7.x86_64-x86_64-with-centos-7.3.1611-Core\n"
@@ -136,13 +136,13 @@
      "data": {
       "text/markdown": [
        "### Intermediates \n",
-       " - [sinclair.tsv](#filename)\n",
-       " - [meredith.tsv](#filename)\n",
-       " - [nexstar.tsv](#filename)\n",
-       " - [hearst.tsv](#filename)\n",
-       " - [tribune.tsv](#filename)\n",
-       " - [station_index.tsv](#filename)\n",
-       " - [usnpl.tsv](#filename)\n",
+       " - [sinclair.tsv](#sinclair)\n",
+       " - [meredith.tsv](#meredith)\n",
+       " - [nexstar.tsv](#nexstar)\n",
+       " - [hearst.tsv](#hearst)\n",
+       " - [tribune.tsv](#tribune)\n",
+       " - [station_index.tsv](#station_index)\n",
+       " - [usnpl.tsv](#usnpl)\n",
        "\n",
        "    \n",
        "### Outputs\n",
