--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -2541,7 +2541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For conevience this filtered dataset is available here: `https://raw.githubusercontent.com/yinleon/LocalNewsDataset/master/data/local_news_dataset_2018_for_domain_analysis.csv`\n",
+    "For convenience this filtered dataset is available here: `https://raw.githubusercontent.com/yinleon/LocalNewsDataset/master/data/local_news_dataset_2018_for_domain_analysis.csv`\n",
     "and also here:<br> `http://bit.ly/local_news_dataset_domains`"
    ]
   },
